# HiganVN

./: .gitignore  README.md  SCRIPTING_MANUAL.md  pyproject.toml  脚本编写与素材指南.md
demo/: README.md
demo/assets/: pack.json
demo/config/: game.json
demo/scripts/: main.vns
docs/: LAYERED_SPRITE.md  PACKAGING.md
editor/: README.md  __init__.py  project_status.md  specification.md  todo
editor/app/: __init__.py  main.py
editor/core/: __init__.py  parser_bridge.py  project.py
editor/examples/: example.higanproj
editor/ui/: __init__.py  main_window.py  outline_panel.py  problems_panel.py  script_editor.py
higanvn/: __init__.py  cli.py
higanvn/assets/: actors.py
higanvn/engine/: animator.py  assets_utils.py  audio_utils.py  backgrounds.py  backlog_view.py  characters.py  choices_ui.py  config_io.py  debug_hud.py  debug_window.py  effects.py  endcard.py  engine.py  enhanced_characters.py  event_bus.py  events.py  expr.py  flow_map.py  flow_map_ui.py  font_utils.py  gallery.py  gallery_io.py  hud_ui.py  image_cache.py  input_handler.py  input_loop.py  layered_renderer.py  overlay.py  performance.py  placeholders.py  preloader.py  renderer.py  renderer_pygame.py  resource_manager.py  rich_text.py  sandbox.py  save_io.py  save_manager.py  settings_menu.py  settings_menu_modern.py  (+14 more)
higanvn/packaging/: README.md  __init__.py  asset_pack.py  asset_scan.py  bootstrap.py  game_config.py  (+3 more)
scripts/: demo.vns  game.vns
tests/: test_animator.py  test_asset_pack.py  test_audio.py  test_events.py  test_layered_sprite.py  test_modern_ui.py  test_parser.py  test_pipeline_features.py  test_renderer_integration.py  test_rich_text.py  test_runtime.py  test_save_system.py  test_snapshot_renderer_flags.py  test_snapshot_saveload.py  test_snapshot_voice_state.py  test_textwrap.py  test_ui_components.py  test_底层优化.py
(+12 files in other folders)
